--- a/custom-css/medvets.css
+++ b/custom-css/medvets.css
@@ -1,29 +1,92 @@
+
 body {
-    width: 100%;
-    height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #000;
+    font-size: 16px;
+}
+
+.navbar-default {
+    background-color: rgba(248,248,248,.96);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    font-size: 20px;
+}
+
+.image-bg-fluid-height,
+.image-bg-fixed-height {
+    text-align: center;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.navbar-brand>img {
+    display: inline-block;
+}
+
+.dropdown:hover,
+.navbar-nav li:hover {
     background-color: #fff;
 }
-
-html {
-    width: 100%;
-    height: 100%;
+.dropdown-menu {
+    background-color: #fff;
+    border: 0;
 }
 
-.jumbotron, .well{
-    background-color: rgba(217, 206, 204, 0.4);
+.image-bg-fluid-height {
+    padding: 100px 0;
 }
 
-.navbar-default, .navbar-nav>li>a {
-    color: #000;
+.image-bg-fixed-height {
+    background: url('../images/img02.JPG') no-repeat center center scroll;
+    height: 450px;
 }
 
-.highlight pre {
-    background-color: #ccc;
-    color: #000;
+.img-center {
+    margin: 0 auto;
 }
 
+.panel-body {
+  padding: 5px;
+}
+
+.panel {
+    background-color: #eee;
+}
+
+.entry-title,
+.page-header {
+    font-size: 3em;
+    margin: 30px 0;
+}
+
+/*.section-lead {
+    margin: 30px 0;
+}
+
+.section-paragraph {
+    margin: 30px 0;
+}*/
+
+@media(max-width:768px) {
+    section {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+
+    .entry-title {
+        font-size: 2em;
+    }
+}
+
+
+pre {
+  display: inline-block;
+}
+
+/**** iframe *****************************************************************/
+iframe {
+    box-shadow: 0 2px 4px #999;
+}
 
 /**** Tables *****************************************************************/
 table {
@@ -35,7 +98,6 @@ table {
     border-spacing: 0;
     box-shadow: 0 2px 4px #999;
 }
-
 table th {
     padding: .2em 1em;
     background-color: #eee;
@@ -46,8 +108,6 @@ table tr {
     background-color:#fff;
     margin: 0;
     padding: 0 }
-table tr:nth-child(2n) {
-    background-color: #f8f8f8; }
 table td {
     padding: .2em 1em;
     border-top: 1px solid #ddd;
